--- a/exo1.yaml
+++ b/exo1.yaml
@@ -41,6 +41,17 @@ paths:
       responses:
         '201':
           description: Book created
+    put:
+      summary: Update book information
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Book'
+      responses:
+        '200':
+          description: Book updated successfully
 components:
   schemas:
     Book:
