feat : add delete request for author

--- a/exo1.yaml
+++ b/exo1.yaml
@@ -80,6 +80,23 @@ paths:
       responses:
         '201':
           description: Author added successfuly
+    put:
+      summary: Update author information
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Author'
+      responses:
+        '200':
+          description: Author updated successfully
+    delete:
+      summary: Delete an author by ID
+      responses:
+        '200':
+          description: Author deleted successfully
+
 components:
   schemas:
     Book:
