feat : change components to group and student

--- a/exo1.yaml
+++ b/exo1.yaml
@@ -58,7 +58,7 @@ paths:
         '200':
           description: Book deleted successfully
 
-  /authors:
+  /student:
     get:
       summary: Get a list of authors
       parameters:
@@ -77,7 +77,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Author'
+              $ref: '#/components/schemas/student'
       responses:
         '201':
           description: Author added successfuly
@@ -88,7 +88,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Author'
+              $ref: '#/components/schemas/student'
       responses:
         '200':
           description: Author updated successfully
@@ -116,9 +116,10 @@ components:
           type: integer
         students:
           type: array
-          items : student
+          items : 
+            $ref: '#/components/schemas/student'
           
-    Author:
+    student:
       type: object
       properties:
         id:
@@ -128,3 +129,11 @@ components:
         sex:
           type: string
           enum: [M, F]
+        birthDate : 
+          type: string
+          format : date
+        reference :
+          type: string
+          pattern: "^STD\\d{5}$"
+        group : 
+          type : string
