fix : change group on the student component to ressource

--- a/TD1_update.yaml
+++ b/TD1_update.yaml
@@ -144,4 +144,4 @@ components:
           type: string
           pattern: "^STD\\d{5}$"
         group:
-          type: string
+          $ref : '#/components/schemas/Group'
